Доработал фронтенд и бэкенд возможностью блокировки пользователя

--- a/public/frontend/index.html
+++ b/public/frontend/index.html
@@ -6,7 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.9585c7f4e339386c6835.css"></head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="styles.433af374a675c318980b.css"></head>
 <body>
   <app-root>
     <div class="text-center">
@@ -15,5 +17,5 @@
       </div>
     </div>
   </app-root>
-<script src="runtime-es2015.0e7bb14aabcf18921abf.js" type="module"></script><script src="runtime-es5.0e7bb14aabcf18921abf.js" nomodule defer></script><script src="polyfills-es5.9b14db5b56e384d03e1b.js" nomodule defer></script><script src="polyfills-es2015.65add6a9686182a79d49.js" type="module"></script><script src="main-es2015.277f047eb23a54a73f56.js" type="module"></script><script src="main-es5.277f047eb23a54a73f56.js" nomodule defer></script></body>
+<script src="runtime-es2015.72895f1f34a0be87f123.js" type="module"></script><script src="runtime-es5.72895f1f34a0be87f123.js" nomodule defer></script><script src="polyfills-es5.9b14db5b56e384d03e1b.js" nomodule defer></script><script src="polyfills-es2015.65add6a9686182a79d49.js" type="module"></script><script src="main-es2015.eae0917bc84fd5c43a15.js" type="module"></script><script src="main-es5.eae0917bc84fd5c43a15.js" nomodule defer></script></body>
 </html>
