--- a/cmd/app/public/frontend/index.html
+++ b/cmd/app/public/frontend/index.html
@@ -13,7 +13,7 @@
   <app-root>
     <div class="text-center">
       <div class="spinner-border" role="status">
-        <span class="sr-only">Loading...</span>
+        <span class="visually-hidden-focusable">Loading...</span>
       </div>
     </div>
   </app-root>
