Доработал поддержку многоязычности фронтенда

--- a/cmd/app/public/frontend/index.html
+++ b/cmd/app/public/frontend/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <meta charset="utf-8">
-  <title>Shopping lists and recipes</title>
+  <title>Shopping list and recipes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -15,6 +15,6 @@
       </div>
     </div>
   </app-root>
-<script src="runtime.df8903698704eb87.js" type="module"></script><script src="polyfills.9b36d71d29477842.js" type="module"></script><script src="main.abf0f61d6f45633f.js" type="module"></script>
+<script src="runtime.945bd89b0e898d62.js" type="module"></script><script src="polyfills.9b36d71d29477842.js" type="module"></script><script src="main.44568e5e6d9faa37.js" type="module"></script>
 
 </body></html>
