--- a/cmd/app/public/frontend/index.html
+++ b/cmd/app/public/frontend/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <meta charset="utf-8">
-  <title>Shopping list and recipes</title>
+  <title>WebsiteTitle</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -15,6 +15,6 @@
       </div>
     </div>
   </app-root>
-<script src="runtime.4fab51ea5d222fc6.js" type="module"></script><script src="polyfills.48c225704e12bad3.js" type="module"></script><script src="main.80579db0e103fd63.js" type="module"></script>
+<script src="runtime.6d2196570aef9ea2.js" type="module"></script><script src="polyfills.48c225704e12bad3.js" type="module"></script><script src="main.b096e0c103652276.js" type="module"></script>
 
 </body></html>
